--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+
 <resources>
     <string name="app_name">Payment Gateway</string>
     <!-- Strings related to login -->
@@ -9,4 +10,8 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+    <!-- Main Menu -->
+    <string name="menu_newPayment_button">Pay</string>
+    <string name="menu_showPayments_button">Show Payments</string>
 </resources>
