--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
     <!-- Main Menu -->
     <string name="menu_newPayment_button">Pay</string>
     <string name="menu_showPayments_button">Show Payments</string>
+
+    <!-- Payment Form -->
+    <string name="paymentForm_user_name_hint">Name</string>
+    <string name="paymentForm_user_email_hint">Email</string>
+    <string name="paymentForm_user_cellphone_hint">Cellphone</string>
+    <string name="paymentForm_card_number_hint">Card Number</string>
+    <string name="paymentForm_card_dueDate_hint">Due Date</string>
+    <string name="paymentForm_card_cvc_hint">CVC</string>
+    <string name="paymentForm_amount_hint">Amount</string>
+    <string name="paymentForm_submit_buttton">Submit</string>
+    <string name="paymentForm_user_section_label">Personal Info</string>
+    <string name="paymentForm_card_section_label">Credit Card</string>
 </resources>
