Added the API to the data module to fetch and send transactions through the retrofit library.
Added the use cases to send checkouts and retrieve its the status.
Refactored the ServiceLocator class

Submitted by Victor Valencia <cytrux@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="paymentForm_user_cellphone_hint">Cellphone</string>
     <string name="paymentForm_card_number_hint">Card Number</string>
     <string name="paymentForm_card_dueDate_hint">Due Date</string>
-    <string name="paymentForm_card_cvc_hint">CVC</string>
+    <string name="paymentForm_card_cvv2_hint">CVV2</string>
     <string name="paymentForm_amount_hint">Amount</string>
     <string name="paymentForm_submit_buttton">Submit</string>
     <string name="paymentForm_user_section_label">Personal Info</string>
