Implemented the repository logic to send a checkout.
Pending to connect the repository logic with the retrofit API service.
Implemented a fake userRepository
Implemented a fake transactionRepository
Implemented the logic of the PaymentForm's viewModel
Added a mapper between presentation and domain module
Setup of the payment form validation was successful
ServiceLocator updated to reflect the dependency changes

Submitted by Victor Valencia <cytrux@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="paymentForm_submit_buttton">Submit</string>
     <string name="paymentForm_user_section_label">Personal Info</string>
     <string name="paymentForm_card_section_label">Credit Card</string>
+    <string name="paymentForm_invalid_user_name">Name should have at least 2 letters</string>
+    <string name="paymentForm_invalid_user_email">Invalid email</string>
+    <string name="paymentForm_invalid_user_cellphone">Invalid cellphone</string>
+    <string name="paymentForm_invalid_card_number">Card number must be at least 10 numbers</string>
+    <string name="paymentForm_invalid_card_due_monthYear">Invalid. Use mm/yyyy format</string>
+    <string name="paymentForm_invalid_card_cvv">Invalid CVV</string>
+    <string name="paymentForm_invalid_amount">Invalid Amount</string>
 </resources>
